# ML_methods

./: 06_L1_and_L2 Regularization.html  README.md  backpropagation.html  bagging_diabetes_prediction.html  bayesian.html  cnns.html  cuda.html  decisiontree.html  ensemble.html  ensemble_tut.html  gaussian_mixture_models.html  generative.html  hyperparameteroptimization.html  index.html  k-nn.html  k_mean_clustering.html  kernalsridgeregression.html  linearregression.html  logisticregression.html  loss_or_cost_funtions.html  multi-linearregression.html  naive_bayes_tut.html  pca.html  pca_tut.html  polynomialregression.html  pyproject.toml  random_forest.html  robots.txt  search.json  settings.ini  sitemap.xml  svm.html  train_test_split.html
ML/: _modidx.py  decisiontree.py  knn.py  linearregression.py  logisticregression.py
MLexamples/: _modidx.py
_proc/: 00_core.ipynb  00_train_test_split.ipynb  01_K-NN.ipynb  02_DecisionTree.ipynb  030_LinearRegression.ipynb  031_LinearRegression_Multivariate.ipynb  031_Multi-LinearRegression.ipynb  03_LinearRegression.ipynb  04_LogisticRegression.ipynb  05_PolynomialRegression.ipynb  06_CrossEntropy.ipynb  06_L1_and_L2 Regularization.ipynb  07_Loss_or_Cost_funtions.ipynb  07_Regularisation.ipynb  08_HyperParameterOptimization.ipynb  08_ParameterOptimization.ipynb  090_Ensemble.ipynb  091_Ensemble_TUT.ipynb  092_bagging_diabetes_prediction.ipynb  09_BackPropagation-Copy1.ipynb  09_BackPropagation.ipynb  100_Bayesian.ipynb  101_Naive_Bayes_TUT.ipynb  10_CNNs.ipynb  110_Ensemble.ipynb  111_bagging_heart_disease_prediction.ipynb  (+32 more)
(+125 files in other folders)
